--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <option value="5">5阶 (45r/h)</option>
                     <option value="6">6阶 (50r/h)</option>
                     <option value="7">7阶 (65r/h)</option>
-                    <option value="top7">巅7 (75r/h)</option>
+                    <option value="8">巅7 (75r/h)</option>
                 </select>
             </div>
             <div class="form-row">
@@ -159,7 +159,7 @@
                     <option value="5">5</option>
                     <option value="6">6</option>
                     <option value="7">7</option>
-                    <option value="top7">巅7</option>
+                    <option value="8">巅7</option>
                 </select>
                 阶
                 <select id="survivor-star-from2" name="survivor-star-from2" disabled>
@@ -170,7 +170,6 @@
                        min="0" max="10000" value="0" disabled>星
 
             </div>
-
 
 
             <div class="form-row">
@@ -184,7 +183,7 @@
                     <option value="5">5</option>
                     <option value="6">6</option>
                     <option value="7">7</option>
-                    <option value="top7">巅7</option>
+                    <option value="8">巅7</option>
                 </select>
                 阶
                 <select id="survivor-star-to2" name="survivor-star-to2" disabled>
@@ -195,6 +194,7 @@
                        min="0" max="10000" value="0" disabled>星
 
             </div>
+
 
         </div>
 
@@ -266,7 +266,7 @@
                     <option value="5">5</option>
                     <option value="6">6</option>
                     <option value="7">7</option>
-                    <option value="top7">巅7</option>
+                    <option value="8">巅7</option>
                 </select>
                 阶
                 <select id="hunter-star-from2" name="hunter-star-from2" disabled>
@@ -291,7 +291,7 @@
                     <option value="5">5</option>
                     <option value="6">6</option>
                     <option value="7">7</option>
-                    <option value="top7">巅7</option>
+                    <option value="8">巅7</option>
                 </select>
                 阶
                 <select id="hunter-star-to2" name="hunter-star-to2" disabled>
@@ -302,6 +302,7 @@
                        min="0" max="10000" value="0" disabled>星
 
             </div>
+
         </div>
 
         <!-- 其他服务类型的 options -->
