--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="form-container">
     <h1>天气晴陪玩团</h1>
-    <h2>IDV价格表</h2>
+    <h2>IDV价格计算器-仅供参考</h2>
 
     <form id="service-form">
         <div class="form-row">
